@@ -1,3 +1,9 @@
+2015-02-20  William A. Perkins  <william.perkins@pnnl.gov>
+
+	* plot_cgns.f90 (plot_cgns_setup, plot_cgns_write)
+	(plot_cgns_file_close): close and reopen CGNS output between
+	output time steps to preserve HDF-based integrity
+
 2015-01-13  William A. Perkins  <william.perkins@pnnl.gov>
 
 	* scalar_solve.f90 (apply_scalar_bc, scalar_solve): implement left
